cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)

project(TD02)

add_executable(ex01 src/td02_ex01.cpp)
add_executable(ex02 src/td02_ex02.cpp)
add_executable(ex03 src/td02_ex03.cpp)
add_executable(ex04 src/td02_ex04.cpp)
add_executable(ex05 src/td02_ex05.cpp)
add_executable(ex06 src/td02_ex06.cpp)
add_executable(exBonus src/td02_exBonus.cpp)